// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render CommentBox correctly 1`] = `
<div>
  <h4>
    Comments
  </h4>
  <p
    className="font-italic"
  >
    You must be signed in to comment...
  </p>
  <ul
    className="list-group-flush pl-0"
  >
    <p>
      Be the first to comment...
    </p>
  </ul>
</div>
`;

exports[`should render CommentForm if user logged in 1`] = `
<div>
  <h4>
    Comments
  </h4>
  <Connect(CommentForm)
    id="5b62cb86efcae617d8a0bef9"
  />
  <ul
    className="list-group-flush pl-0"
  >
    <p>
      Be the first to comment...
    </p>
  </ul>
</div>
`;
